--- a/src/RemoteJob/RemoteJob.module.css
+++ b/src/RemoteJob/RemoteJob.module.css
@@ -1,6 +1,7 @@
 .remoteJob {
     height: 22rem;
     background-color: aqua;
+    width: 100%;
 }
 .projectsContainer{
     justify-content: space-between;
