--- a/src/Header/Header.module.css
+++ b/src/Header/Header.module.css
@@ -1,7 +1,14 @@
 .header {
     height: 80px;
+    width: 100%;
     background-color: #99d0fb;
     display: flex;
     justify-content: flex-end;
     align-items: center;
+}
+
+@media (max-width: 425px) {
+    .header {
+        justify-content: center;
+    }
 }
