--- a/src/Main/Main.module.css
+++ b/src/Main/Main.module.css
@@ -1,14 +1,36 @@
 .mainBlock {
     height: 100vh;
     background-color: greenyellow;
+    width: 100%;
 }
 
 .text {
-    width: 300px;
-    background-color: darkred;
+
 }
 .photo {
     width: 300px;
     height: 400px;
     background-color: black;
+}
+
+@media (max-width: 425px) {
+    .mainBlock {
+        height: auto;
+        padding: 100px 0;
+    }
+    .photo {
+        margin: 0 auto;
+    }
+
+    .text {
+        margin-right: 50%;
+        margin-bottom: 50px;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+
+    }
+    h1 {
+        white-space: nowrap;
+    }
 }
