--- a/src/MyProjects/Projects.module.css
+++ b/src/MyProjects/Projects.module.css
@@ -1,6 +1,7 @@
 .projectsBlock {
     height: 100vh;
     background-color: wheat;
+    width: 100%;
 }
 
 .projects {
@@ -14,4 +15,14 @@
 .projectsContainer{
     justify-content: flex-start;
     flex-direction: column;
+}
+
+@media (max-width: 425px) {
+    .projectsBlock {
+        height: 100%;
+    }
+    .projectsContainer {
+        flex-wrap: nowrap;
+    }
+
 }
