--- a/src/Skills/Skills.module.css
+++ b/src/Skills/Skills.module.css
@@ -15,3 +15,10 @@
     justify-content: space-evenly;
     flex-wrap: wrap;
 }
+
+@media (max-width: 425px) {
+    .skills {
+        margin-top: 35px;
+    }
+
+}
