--- a/src/Header/Header.module.css
+++ b/src/Header/Header.module.css
@@ -7,8 +7,17 @@
     align-items: center;
 }
 
+.headerContainer {
+    height: 100%;
+    width: 80%;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: flex-end;
+}
 @media (max-width: 425px) {
-    .header {
+    .headerContainer {
         justify-content: center;
     }
 }
