--- a/src/MyProjects/Project/Project.module.css
+++ b/src/MyProjects/Project/Project.module.css
@@ -10,8 +10,12 @@
     width: 250px;
     height: 300px;
     background-color: black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .description {
 
 }
+
