--- a/src/common/styles/Container.module.css
+++ b/src/common/styles/Container.module.css
@@ -5,7 +5,7 @@
     margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
 }
 
