--- a/src/MyProjects/Project/Project.module.css
+++ b/src/MyProjects/Project/Project.module.css
@@ -1,5 +1,6 @@
 .project {
     width: 250px;
+    margin-top: 30px;
     background-color: #99d0fb;
     display: flex;
     flex-direction: column;
@@ -10,6 +11,9 @@
     width: 250px;
     height: 300px;
     background-color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .description {
