--- a/src/ContactForm/ContactForm.module.css
+++ b/src/ContactForm/ContactForm.module.css
@@ -1,10 +1,14 @@
 .contactForm {
     height: 100vh;
     width: 100%;
+    background-color: #1f1f20;
+}
+form input, form textarea {
+    width: 100%;
 }
 
 input {
-    width: 10rem;
+    /*width: 10rem;*/
     background-color: wheat;
     margin-top: 30px;
 
@@ -15,6 +19,7 @@ textarea {
 }
 
 form {
+    width: 40%;
     display: flex;
     justify-content: space-around;
     flex-direction: column;
