--- a/src/MyProjects/Project/Project.module.css
+++ b/src/MyProjects/Project/Project.module.css
@@ -1,4 +1,5 @@
 .project {
+
     width: 250px;
     margin-top: 30px;
     background-color: #99d0fb;
@@ -18,4 +19,12 @@
 
 .description {
 
+}
+
+h3 {
+    text-transform: uppercase;
+    margin: 0 0 15px;
+    padding: 0;
+    letter-spacing: 1px;
+    font: 700 16px/1.2 'Josefin Sans', sans-serif;
 }
