--- a/src/MyProjects/Projects.module.css
+++ b/src/MyProjects/Projects.module.css
@@ -1,7 +1,8 @@
 .projectsBlock {
-    height: 100%;
-    background-color: wheat;
+    min-height: 100vh;
+    background-color: #1f1f20;
     width: 100%;
+
 }
 
 .projects {
@@ -15,6 +16,12 @@
 .projectsContainer{
     justify-content: flex-start;
     flex-direction: column;
+}
+.moduleLine {
+    background: #4e93e6;
+    width: 55px;
+    height: 1px;
+    margin: 30px auto;
 }
 
 @media (max-width: 425px) {
