--- a/src/Skills/Skills.module.css
+++ b/src/Skills/Skills.module.css
@@ -1,6 +1,6 @@
 .skillsBlock {
     height: 100vh;
-    background-color: green;
+    background-color: #1f1f20;
 }
 .skillsContainer {
     justify-content: flex-start;
@@ -14,6 +14,9 @@
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
+
+}
+.moduleLine {
 
 }
 
