--- a/src/Skills/Skill/Skill.module.scss
+++ b/src/Skills/Skill/Skill.module.scss
@@ -19,7 +19,7 @@
   background-size: cover;
   background-position: center;
   position: relative;
-  transform: rotate(45deg);
+  transform: rotate(45deg)
 
 }
 .skillInfo {
