--- a/src/Header/Header.module.css
+++ b/src/Header/Header.module.css
@@ -1,7 +1,7 @@
 .header {
     height: 80px;
     width: 100%;
-    background-color: #99d0fb;
+    background-color: #262626;
     display: flex;
     justify-content: flex-end;
     align-items: center;
