--- a/src/common/Button/Button.module.css
+++ b/src/common/Button/Button.module.css
@@ -2,7 +2,7 @@
     padding: 12px 25px 10px;
     width: initial;
     background-color: transparent;
-    color: #f0d8d9;
+    color: #fff;
     border: 1px solid #f0d8d9;
     position: relative;
     z-index: 10;
