--- a/src/nav/Nav.module.css
+++ b/src/nav/Nav.module.css
@@ -1,12 +1,16 @@
 .nav {
-    border: 1px solid red;
     width: 300px;
     display: flex;
     justify-content: space-evenly;
     margin-right: 10%;
 }
 a {
-    margin-left: 10px;
+    margin-left: 50px;
+    color: #e6e6e6;
+    font-size: 20px;
+    padding: 0;
+    font-family: "Josefin Sans", sans-serif;
+    text-decoration: none;
 }
 
 @media (max-width: 425px) {
