feat: added projects

--- a/src/MyProjects/Projects.module.scss
+++ b/src/MyProjects/Projects.module.scss
@@ -1,6 +1,6 @@
 .projectsBlock {
   min-height: 100vh;
-  background-color: #1f1f20;
+  background-color: #111;
   width: 100%;
   @media (max-width: 425px) {
     height: 100%;
