--- a/src/ContactForm/ContactForm.module.css
+++ b/src/ContactForm/ContactForm.module.css
@@ -1,21 +1,39 @@
 .contactForm {
-    height: 100vh;
     width: 100%;
     background-color: #1f1f20;
+    padding: 100px 0;
 }
 form input, form textarea {
     width: 100%;
 }
 
 input {
-    /*width: 10rem;*/
-    background-color: wheat;
-    margin-top: 30px;
+    padding: 12px 15px;
+    width: 100%;
+    box-sizing: border-box;
+    font-weight: normal;
+    font-size: 12px;
+    line-height: 14px;
+    border: none;
+    border-radius: 5px;
+    background-color: white;
+    margin-top: 15px;
 
 }
 textarea {
-    background-color: #99d0fb;
-    margin-top: 30px;
+    padding: 11px 15px 13px 14px;
+    resize: none;
+    max-height: 159px;
+    margin-top: 15px;
+    margin-bottom: 14px;
+    width: 100%;
+    box-sizing: border-box;
+    font-weight: normal;
+    font-size: 12px;
+    line-height: 14px;
+    border: none;
+    border-radius: 5px;
+    background-color: white;
 }
 
 form {
@@ -27,4 +45,10 @@ form {
 .contactFormContainer {
     justify-content: space-around;
     flex-direction: column;
+}
+.contactForm button {
+    width: 20%;
+    padding: 10px 28px 14px;
+    border-radius: 5px;
+    align-content: center;
 }
