--- a/src/common/styles/Container.module.css
+++ b/src/common/styles/Container.module.css
@@ -3,7 +3,6 @@
     width: 80%;
     margin: 0 auto;
     display: flex;
-    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
 }
@@ -17,6 +16,7 @@
     .container {
         justify-content: center;
         border: 0;
+        flex-direction: column;
 
     }
 }
