--- a/src/ContactForm/ContactForm.module.css
+++ b/src/ContactForm/ContactForm.module.css
@@ -3,6 +3,7 @@
     background-color: #1f1f20;
     padding: 100px 0;
 }
+
 form input, form textarea {
     width: 100%;
 }
@@ -20,6 +21,7 @@ input {
     margin-top: 15px;
 
 }
+
 textarea {
     padding: 11px 15px 13px 14px;
     resize: none;
@@ -42,13 +44,47 @@ form {
     justify-content: space-around;
     flex-direction: column;
 }
+
 .contactFormContainer {
     justify-content: space-around;
     flex-direction: column;
 }
+
 .contactForm button {
     width: 20%;
     padding: 10px 28px 14px;
     border-radius: 5px;
     align-content: center;
+}
+
+@media (max-width: 1235px) {
+    form {
+
+    }
+    .contactForm button {
+        width: 30%;
+    }
+}@media (max-width: 1024px) {
+    form {
+        width: 60%;
+    }
+    .contactForm button {
+        width: 40%;
+    }
+}
+@media (max-width: 600px) {
+    form {
+        width: 80%;
+    }
+    .contactForm button {
+        width: 40%;
+    }
+}
+@media (max-width: 375px) {
+    form {
+        width: 100%;
+    }
+    .contactForm button {
+        width: 100%;
+    }
 }
