--- a/src/MyProjects/Project/Project.module.scss
+++ b/src/MyProjects/Project/Project.module.scss
@@ -18,16 +18,29 @@
     background-size: cover;
     background-position: center;
     position: relative;
-    &::before {
+
+    &:hover::before {
       position: absolute;
       content: '';
-      background-color: black;
+      //background-color: black;
       top: 0;
       bottom: 0;
       left: 0;
       right: 0;
-      opacity: 0.3;
+      text-decoration: none;
+      color: #999;
+      //opacity: 0.3;
       z-index: 0;
+      transition: all 0.125s ease-in-out 0s;
+      opacity: 0.3;
+      background-color: #1f1f20;
+    }
+    & button {
+      display: none;
+    }
+    &:hover button {
+      border: 1px solid #f0d8d9;
+      display: block;
     }
   }
 
