--- a/src/Main/Main.module.css
+++ b/src/Main/Main.module.css
@@ -22,15 +22,17 @@
     position: relative;
     display: inline-block;
     margin: 0 5px;
+    z-index: 100;
 
 }
 
 .name::after, .surName:after {
     content: "";
     position: absolute;
-    bottom: 0;
+    bottom: 2px;
     height: 20px;
     background: #4e93e6;
+    z-index: -1;
 }
 
 .name::after {
