--- a/src/MyProjects/Projects.module.scss
+++ b/src/MyProjects/Projects.module.scss
@@ -1,5 +1,5 @@
 .projectsBlock {
-  min-height: 100vh;
+  min-height: 625px;
   background-color: #111;
   width: 100%;
   @media (max-width: 1162px) {
