--- a/src/ContactForm/ContactForm.module.css
+++ b/src/ContactForm/ContactForm.module.css
@@ -6,6 +6,7 @@
 
 form input, form textarea {
     width: 100%;
+    outline: 1px solid transparent;
 }
 
 input {
@@ -50,41 +51,49 @@ form {
     flex-direction: column;
 }
 
-.contactForm button {
-    width: 20%;
-    padding: 10px 28px 14px;
-    border-radius: 5px;
-    align-content: center;
-}
+/*.contactForm button {*/
+/*    width: 20%;*/
+/*    padding: 10px 28px 14px;*/
+/*    border-radius: 5px;*/
+/*    align-content: center;*/
+/*}*/
 
 @media (max-width: 1235px) {
     form {
 
     }
-    .contactForm button {
-        width: 30%;
-    }
-}@media (max-width: 1024px) {
+
+    /*.contactForm button {*/
+    /*    width: 30%;*/
+    /*}*/
+}
+
+@media (max-width: 1024px) {
     form {
         width: 60%;
     }
-    .contactForm button {
-        width: 40%;
-    }
+
+    /*.contactForm button {*/
+    /*    width: 40%;*/
+    /*}*/
 }
+
 @media (max-width: 600px) {
     form {
         width: 80%;
     }
-    .contactForm button {
-        width: 40%;
-    }
+
+    /*.contactForm button {*/
+    /*    width: 40%;*/
+    /*}*/
 }
+
 @media (max-width: 375px) {
     form {
         width: 100%;
     }
-    .contactForm button {
-        width: 100%;
-    }
+
+    /*.contactForm button {*/
+    /*    width: 100%;*/
+    /*}*/
 }
