--- a/src/common/Buttons/ProjectButton.module.scss
+++ b/src/common/Buttons/ProjectButton.module.scss
@@ -1,9 +1,10 @@
 .button {
     padding: 12px 25px 10px;
-    width: initial;
+    width: 30%;
     background-color: transparent;
     color: #fff;
     border: 1px solid #f0d8d9;
     position: relative;
     z-index: 10;
+
 }
