feat: add cards project

--- a/src/MyProjects/Projects.module.scss
+++ b/src/MyProjects/Projects.module.scss
@@ -2,6 +2,7 @@
   min-height: 625px;
   background-color: #111;
   width: 100%;
+  padding-bottom: 60px;
   @media (max-width: 1162px) {
     height: 100%;
     padding-bottom: 60px;
